2014-01-30 Pierre Wieser <pwieser@trychlos.org>

	* m4/na-compiler-flags.m4: Renamed to m4/na-compiler.m4.
	* m4/na-compiler.m4: Macros are renamed as NA_COMPILER_xxxx.

	* maintainer/README:
	* maintainer/Makefile.am:
	* maintainer/.gitignore: New files.

	* run-autogen.sh:
	* run-distcheck.sh:
	* tools/check-po.sh:
	* tools/check-headers.sh: Move to maintainer/.

	* configure.ac:
	* Makefile.am: Updated accordingly.

2014-01-27 Pierre Wieser <pwieser@trychlos.org>

	* docs/nact/C/articleinfo.xml:
	* All source files: Bump copyright year.

2013-09-26 Pierre Wieser <pwieser@trychlos.org>

	* Makefile.am: Add ChangeLog-2012 to the distribution.

	* configure.ac: Post release version bump.

2013-09-24 Pierre Wieser <pwieser@trychlos.org>

	* NEWS: Updating NEWS before releasing.

	* docs/nact/Makefile.am: Fix the DOC_FIGURES variable,
	prefixing all images with 'figures/' directory name.

2013-09-14 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-settings.h: Fix configuration filename in the class
	description.

	* src/core/na-gtk-utils.c (na_gtk_utils_restore_window_position):
	Provides a default size and position for main window.

2013-09-13 Pierre Wieser <pwieser@trychlos.org>

	* docs/nact/Makefile.am: Fix the DOC_LINGUAS variable.

2013-09-11 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-gtk-utils.c (na_gtk_utils_restore_window_position):
	Bad hack to try immediately target ideal size and position the first time
	we open the main window.

	Only allow the 'About Nautilus-Actions...' item inside of the
	Nautilus-Actions root menu.

	* src/nact/nact-preferences-editor.c (about_item_set_sensitive): New function.

	* src/plugin-menu/nautilus-actions.c (build_nautilus_menu):
	Only insert the 'About...' item inside of the root Nautilus-Actions menu.

	* src/plugin-menu/nautilus-actions.c (build_nautilus_menu_rec):
	Improve debug message.

	* src/plugin-menu/nautilus-actions.c (build_nautilus_menu):