@@ -1,5 +1,8 @@
 2014-01-30 Pierre Wieser <pwieser@trychlos.org>
 
+	* m4/na-maintainer-mode.m4: Renamed to m4/na-maintainer.m4.
+	* m4/na-maintainer.m4: Macros are renamed as NA_MAINTAINER_xxxx.
+
 	* m4/na-compiler-flags.m4: Renamed to m4/na-compiler.m4.
 	* m4/na-compiler.m4: Macros are renamed as NA_COMPILER_xxxx.
 
